// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiFacetInput renders text field 1`] = `
<TextField
  name="renders text field"
  resize="both"
  type="text"
/>
`;

exports[`MultiFacetInput renders text field with an error when not open 1`] = `
<TextField
  error="Oh no!"
  name="renders text field with an error when not open"
  resize="both"
  type="text"
/>
`;

exports[`MultiFacetInput renders text field without an error when open 1`] = `
<TextField
  name="renders text field without an error when open"
  resize="both"
  type="text"
/>
`;
